--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-modal": "3.14.4",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.0"
