--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "polished": "^4.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "3.14.4",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
