--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MODE=development
 API_URL_PRODUCTION=meu-dominio
 API_URL_DEVELOPMENT=http://localhost:8080/
 API_ENDPOINT=backend
-API_PORT=3000
+CLIENT_PORT=3000
